--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-history": "^0.18.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-scroll": "^1.8.1",
     "styled-components": "^5.1.1"
   },
   "scripts": {
